--- a/RFCRestyle/popup.css
+++ b/RFCRestyle/popup.css
@@ -21,7 +21,7 @@ input[type="color"] {
 	background: transparent;
 	vertical-align: middle;
 	height: 2rem;
-	padding :0;
+	padding: 0;
 	border: 0;
 	margin: 0;
 }
@@ -45,7 +45,7 @@ label {
 	white-space: nowrap;
 	display: block;
 }
-hr, fieldset {
+fieldset, hr {
 	border: 1px solid #999;
 }
 fieldset {
@@ -64,4 +64,7 @@ fieldset[name="uls"] label {
 fieldset[name="stylrs"] {
 	padding: 0;
 	border: 0;
+}
+fieldset:disabled {
+	opacity: .5;
 }
